--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,7 @@ dependencies {
     //Necesarias para firebase
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation platform('com.google.firebase:firebase-bom:30.3.1')
-    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation "com.google.firebase:firebase-iid:21.1.0"
@@ -64,6 +63,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.firebase:firebase-core:20.0.0'
 
     //Necesarias para el viewmodel
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
