Layaout: profile, home, item_list_team, welcome
adaptador gestionado correctamente solo falta darle vida al reloc y al turno del contricante, nombre email e imagen implementados en en profile de la cuenta google, cambios al tema de dia y de noche faltas mas estilos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'androidx.core:core:1.6.0'
     //Necesarias para firebase
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
@@ -75,4 +76,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Vectores animados
+    implementation "com.airbnb.android:lottie:3.4.0"
 }
+
+apply plugin: 'com.google.gms.google-services'
